// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly when >1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     expenses totalling 
    $1,231.23
  </h1>
</div>
`;

exports[`should render ExpenseSummary correctly when 0 expenses 1`] = `
<div>
  <h1>
    No matching expenses!
  </h1>
</div>
`;

exports[`should render ExpenseSummary correctly when 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense totalling 
    $254.77
  </h1>
</div>
`;
